# stockanalyser

./: .vercelignore  PRD.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/: index.html
src/: analyser.py  main.py
static/: app.js  index.html  style.css
